cabal-version:  3.6

name:           mutagen
version:        0.1.0.0
synopsis:       Property-based testing framework for Haskell using type-preserving mutations.
description:    Please see the README on GitHub at <https://github.com/agustinmista/mutagen#readme>
category:       Testing
homepage:       https://github.com/agustinmista/mutagen#readme
bug-reports:    https://github.com/agustinmista/mutagen/issues
author:         Agustin Mista
copyright:      2021 Agustin Mista
maintainer:     mista@chalmers.se
license:        MIT
license-file:   LICENSE
build-type:     Simple

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/agustinmista/mutagen

flag MUTAGEN_TH_DEBUG
  description: Enable debug messages for Template Haskell derivations.
  default: False
  manual: True
flag MUTAGEN_PLUGIN_DEBUG
  description: Enable debug messages for the Tracer plugin.
  default: False
  manual: True

library
  exposed-modules:
    Test.Mutagen
    Test.Mutagen.Config
    Test.Mutagen.Exception
    Test.Mutagen.Fragment
    Test.Mutagen.Lazy
    Test.Mutagen.Mutant
    Test.Mutagen.Mutation
    Test.Mutagen.Property
    Test.Mutagen.Report
    Test.Mutagen.TH
    Test.Mutagen.Tracer
    Test.Mutagen.Tracer.Plugin
  other-modules:
    Test.Mutagen.TH.Arbitrary
    Test.Mutagen.TH.Fragmentable
    Test.Mutagen.TH.Lazy
    Test.Mutagen.TH.Mutable
    Test.Mutagen.TH.Util
    Test.Mutagen.Test.Driver
    Test.Mutagen.Test.Loop
    Test.Mutagen.Test.Queue
    Test.Mutagen.Test.State
    Test.Mutagen.Test.Terminal
    Test.Mutagen.Tracer.Annotation
    Test.Mutagen.Tracer.Metadata
    Test.Mutagen.Tracer.Store
    Test.Mutagen.Tracer.Store.API
    Test.Mutagen.Tracer.Store.Bitmap
    Test.Mutagen.Tracer.Store.Tree
    Test.Mutagen.Tracer.Store.Types
    Test.Mutagen.Tracer.Trace
  hs-source-dirs:
    src
  build-depends:
      base >=4.18 && <5
    , aeson
    , ansi-terminal
    , array
    , brick
    , containers
    , directory
    , extra
    , filepath
    , ghc
    , mtl
    , pqueue
    , pretty-simple
    , pretty-tree
    , process
    , QuickCheck
    , random
    , syb
    , template-haskell
    , th-desugar
    , time
    , vector
    , vty
  ghc-options:
    -Wall -Werror
  default-extensions:
    CPP
  default-language:
    Haskell2010
  if flag(MUTAGEN_TH_DEBUG)
    cpp-options: -DMUTAGEN_TH_DEBUG
  if flag(MUTAGEN_PLUGIN_DEBUG)
    cpp-options: -DMUTAGEN_PLUGIN_DEBUG

test-suite test-re
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs:
    test/re
  other-modules:
    RE.Types
    RE.Match
  default-language:
    Haskell2010
  ghc-options:
    -Wall -O2 -threaded
  build-depends:
      base >=4.18 && <5
    , mutagen
